# feature-extraction

./: README.md  april_tag_grid_gen.py
building/: Dockerfile
building/install_scripts/: install_library_dependencies.sh
building/local/: run_container.sh  run_webcam_demo.sh
building/scripts/: build_library.sh  code_checks.sh
code/: CMakeLists.txt
code/examples/: aprilgrid3_webcam_demo.cpp  target_config.yaml
code/include/feature_extraction/: april_tag_cpp_wrapper.hpp  cost_functions.hpp  feature_extraction.hpp  target_extraction.hpp  target_extractors.hpp
code/include/optimization_architecture/: optimizer_handler.hpp
code/src/: april_tag_cpp_wrapper.cpp  april_tag_cpp_wrapper.hpp  april_tag_cpp_wrapper.test.cpp  april_tag_family_36h11.hpp  april_tag_family_custom_25h9.hpp  april_tag_family_custom_36h11.hpp  april_tag_handling.hpp  april_tag_test_fixture.hpp  checkboard_generator.cpp  checkboard_generator.hpp  checkboard_generator.test.cpp  checkerboard_extractor.cpp  checkerboard_extractor.hpp  checkerboard_extractor.test.cpp  checkerboard_generator.cpp  checkerboard_generator.hpp  checkerboard_generator.test.cpp  eigen_utilities.cpp  eigen_utilities.hpp  eigen_utilities.test.cpp  feature_extraction.cpp  grid_utilities.cpp  grid_utilities.hpp  grid_utilities.test.cpp  optimizer_handler.cpp  target_extraction.cpp  target_extractors.cpp  target_extractors.hpp  target_extractors.test.cpp  target_extractors_april_tag.test.cpp  target_generators.cpp  target_generators.hpp  target_generators.test.cpp  target_generators_april_tag.cpp  target_generators_april_tag.hpp  target_generators_april_tag.test.cpp  test_fixture_april_tag.hpp  test_fixture_yaml_config.hpp  utilities.test.cpp
code/src/apriltag/: tagCustom36h11.h
code/src/generated_apriltag_code/: tagCustom36h11.c  tagCustom36h11.h
code/test/: april_tag_cpp_wrapper.test.cpp  feature_extraction.test.cpp  target_extraction.test.cpp  test_cost_functions.cpp  test_optimizer_handler.cpp
